--- a/index.html
+++ b/index.html
@@ -27,14 +27,16 @@
                 <div class="mbr-navbar__column mbr-navbar__column--s mbr-navbar__brand">
                     <span class="mbr-navbar__brand-link mbr-brand mbr-brand--inline">
                         <span class="mbr-brand__logo"><img src="assets/images/eiowlg.gif" class="mbr-navbar__brand-img mbr-brand__img" alt="Mobirise"></span>
-                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="https://mobirise.com">A BREIF DESCRIPTION OF HUMAN KIDNEY</a></span>
+                        <span class="mbr-brand__name"><a class="mbr-brand__name text-white" href="">A BREIF DESCRIPTION OF HUMAN KIDNEY</a></span>
                     </span>
                 </div>
                 <div class="mbr-navbar__hamburger mbr-hamburger"><span class="mbr-hamburger__line"></span></div>
                 <div class="mbr-navbar__column mbr-navbar__menu">
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
-                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://mobirise.com">HUMAN KIDNEY</a></li></ul>                            
+                            <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://calm-sky-065596010.2.azurestaticapps.net">HUMAN KIDNEY</a></li>
+                          <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="kidneycarebot.html">HUMAN KIDNEY</a></li>
+                          </ul>                            
                             
                         </div>
                     </nav>
