--- a/index.html
+++ b/index.html
@@ -432,6 +432,9 @@ City, AA 99999</strong></p>
         </div>
     </div>
 </section>
+  <div>
+<iframe src='https://webchat.botframework.com/embed/kidneycarebot-rzqtabr?s=W7cVRBRSg48.ROR73C8j7lProFPdT5_sqBdOKrkwQDMxlglVu2ujLHQ'  style='min-width: 400px; width: 100%; min-height: 500px;'></iframe>
+</div>
 
 <footer class="mbr-section mbr-section--relative mbr-section--fixed-size" id="footer1-f" data-rv-view="67" style="background-color: rgb(68, 68, 68);">
     
