--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <nav class="mbr-navbar__menu-box mbr-navbar__menu-box--inline-right">
                         <div class="mbr-navbar__column">
                             <ul class="mbr-navbar__items mbr-navbar__items--right float-left mbr-buttons mbr-buttons--freeze mbr-buttons--right btn-decorator mbr-buttons--active mbr-buttons--only-links"><li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="https://calm-sky-065596010.2.azurestaticapps.net">HUMAN KIDNEY</a></li>
-                          <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="kidneycarebot.html">HUMAN KIDNEY</a></li>
+                          <li class="mbr-navbar__item"><a class="mbr-buttons__link btn text-white" href="kidneycarebot.html">HUMAN KIDNEY CARE BOT</a></li>
                           </ul>                            
                             
                         </div>
